--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,12 +16,44 @@
             23/02/2024
         </div>
         <ul class="currencies">
-
+            <li class="currency base-currency" id="USD">
+                <img src="http://www.geonames.org/flags/l/us.gif" alt="" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#36;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">USD - US Dollar</p>
+                    <p class="base-currency-rate">1 USD = 1 USD</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
+            <li class="currency" id="USD">
+                <img src="http://www.geonames.org/flags/l/jp.gif" alt="" class="flag">
+                <div class="info">
+                    <p class="input"><span class="currency-symbol">&#36;</span><input placeholder="0.0000"></p>
+                    <p class="currency-name">JPY - Japanese Yen</p>
+                    <p class="base-currency-rate">1 USD = 111.0401 JPY</p>
+                </div>
+                <span class="close">&times;</span>
+            </li>
         </ul>
+        <button class="add-currency-btn"><i class="fas fa-long-arrow-alt-left"></i>Add Currency</button>
         <ul class="add-currency-list">
-
+            <li data-currency="USD" class="disabled">
+                <img src="http://www.geonames.org/flags/l/us.gif" alt="" class="flag">
+                <span>USD - US Dollar</span>
+            </li>
+            <li data-currency="NZD">
+                <img src="http://www.geonames.org/flags/l/nz.gif" alt="" class="flag">
+                <span>NZD - New Zealand Dollar</span>
+            </li>
+            <li data-currency="CAD">
+                <img src="http://www.geonames.org/flags/l/ca.gif" alt="" class="flag">
+                <span>CAD - Canadian Dollar</span>
+            </li>
+            <li data-currency="MXN">
+                <img src="http://www.geonames.org/flags/l/mx.gif" alt="" class="flag">
+                <span>MXN - Mexican Peso</span>
+            </li>
         </ul>
-        <button class="add-currency-btn">Add Currency</button>
     </div>
 
     <script src="main.js"></script>
